@@ -14,6 +14,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">.</field>
             <field name="thousands_sep">,</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">.</field>
+            <field name="mon_thousands_sep">,</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="False"/>
+            <field name="n_sep_by_space" eval="False"/>
         </record>
 
         <menuitem name="Administration" id="menu_administration"
