@@ -12,6 +12,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_ca">
             <field name="code">ca</field>
@@ -20,6 +31,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"> </field>
+            <field name="mon_grouping">[]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_cs">
             <field name="code">cs</field>
@@ -28,6 +50,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"> </field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_de">
             <field name="code">de</field>
@@ -36,6 +69,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <!--
         lang_en is defined in ir.xml
@@ -47,14 +91,36 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_es_419">
             <field name="code">es_419</field>
             <field name="name">Spanish (Latin American)</field>
             <field name="date">%d/%m/%Y</field>
             <field name="grouping">[3, 3, 0]</field>
-            <field name="decimal_point">,</field>
-            <field name="thousands_sep">.</field>
+            <field name="decimal_point">.</field>
+            <field name="thousands_sep">,</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">.</field>
+            <field name="mon_thousands_sep">,</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_fr">
             <field name="code">fr</field>
@@ -63,6 +129,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"> </field>
+            <field name="mon_grouping">[3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_hu_HU">
             <field name="code">hu_HU</field>
@@ -71,6 +148,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_it_IT">
             <field name="code">it_IT</field>
@@ -79,6 +167,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_lo">
             <field name="code">lo</field>
@@ -87,6 +186,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">.</field>
             <field name="thousands_sep">,</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">.</field>
+            <field name="mon_thousands_sep">,</field>
+            <field name="p_sign_posn">4</field>
+            <field name="n_sign_posn">4</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_lt">
             <field name="code">lt</field>
@@ -95,6 +205,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"> </field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_nl">
             <field name="code">nl</field>
@@ -103,6 +224,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">2</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_pl">
             <field name="code">pl</field>
@@ -110,6 +242,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="date">%d.%m.%Y</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"></field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_pt_BR">
             <field name="code">pt_BR</field>
@@ -118,6 +261,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep">.</field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_ru">
             <field name="code">ru</field>
@@ -126,6 +280,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep"> </field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">.</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_sl">
             <field name="code">sl</field>
@@ -134,6 +299,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 3, 0]</field>
             <field name="decimal_point">,</field>
             <field name="thousands_sep">.</field>
+            <field name="mon_grouping">[3, 3, 0]</field>
+            <field name="mon_decimal_point">,</field>
+            <field name="mon_thousands_sep"> </field>
+            <field name="p_sign_posn">1</field>
+            <field name="n_sign_posn">1</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="False"/>
+            <field name="n_cs_precedes" eval="False"/>
+            <field name="p_sep_by_space" eval="True"/>
+            <field name="n_sep_by_space" eval="True"/>
         </record>
         <record model="ir.lang" id="lang_zh_CN">
             <field name="code">zh_CN</field>
@@ -142,6 +318,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="grouping">[3, 0]</field>
             <field name="decimal_point">.</field>
             <field name="thousands_sep">,</field>
+            <field name="mon_grouping">[3, 0]</field>
+            <field name="mon_decimal_point">.</field>
+            <field name="mon_thousands_sep">,</field>
+            <field name="p_sign_posn">4</field>
+            <field name="n_sign_posn">4</field>
+            <field name="positive_sign"></field>
+            <field name="negative_sign">-</field>
+            <field name="p_cs_precedes" eval="True"/>
+            <field name="n_cs_precedes" eval="True"/>
+            <field name="p_sep_by_space" eval="False"/>
+            <field name="n_sep_by_space" eval="False"/>
         </record>
 
         <record model="ir.ui.view" id="lang_view_tree">
