@@ -24,4 +24,31 @@ this repository contains the full copyright notices and license terms. -->
     <field name="thousands_sep"/>
     <label name="decimal_point"/>
     <field name="decimal_point"/>
+    <separator string="Monetary Formatting" colspan="6" id="monetary"/>
+    <label name="mon_grouping"/>
+    <field name="mon_grouping"/>
+    <label name="mon_thousands_sep"/>
+    <field name="mon_thousands_sep"/>
+    <label name="mon_decimal_point"/>
+    <field name="mon_decimal_point"/>
+    <newline/>
+    <label name="positive_sign"/>
+    <field name="positive_sign"/>
+    <label name="negative_sign"/>
+    <field name="negative_sign"/>
+    <newline/>
+    <label name="p_sign_posn"/>
+    <field name="p_sign_posn"/>
+    <label name="n_sign_posn"/>
+    <field name="n_sign_posn"/>
+    <newline/>
+    <label name="p_cs_precedes"/>
+    <field name="p_cs_precedes"/>
+    <label name="n_cs_precedes"/>
+    <field name="n_cs_precedes"/>
+    <newline/>
+    <label name="p_sep_by_space"/>
+    <field name="p_sep_by_space"/>
+    <label name="n_sep_by_space"/>
+    <field name="n_sep_by_space"/>
 </form>
